@@ -120,6 +120,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_Reference.sql.rpt">Probes/Primers w/out References</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_Images.rpt">Papers Requiring Images</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_LackingImages.rpt">Papers Requiring Permissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeableIndexed.rpt">Indexed-Full-Coded gene list</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_ImagePanes.rpt">Panes Lacking Coordinates</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable2.rpt">Papers containing genes that are not in the full coded portion of the database</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable.rpt">Markers that have no full coded data</A>
