@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-0-0-21
+DATE: 08/07/2012
+STAFF: lec
+CHANGES: 
+1) TR11107/GXD_FullCodeableIndexed.py; added
+
 TAG: qcreports_db-5-0-0-20
 DATE: 08/01/2012
 STAFF: lec
